--- a/main.html
+++ b/main.html
@@ -8,23 +8,29 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div id="myCarousel" class="carousel" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="first-slide">
       <img src="https://img.freepik.com/free-photo/puppy-that-is-walking-snow_1340-37228.jpg?w=2000" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
+    <div class="second-slide">
       <img src="https://img.freepik.com/premium-photo/beautiful-baby-dog_943963-407.jpg?w=2000" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
+    <div class="third-slide active">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZ6KFQVCcDBwS1KVTx0wgv8xp6spcbVhURwmGRmJ4YZxnBmh98sb0WFyCiT1LLuGNhX6E&usqp=CAU" class="d-block w-100" alt="...">
     </div>
+	  <div class="fourth-slide">
+      <img src="https://t4.ftcdn.net/jpg/00/97/58/97/360_F_97589769_t45CqXyzjz0KXwoBZT9PRaWGHRk5hQqQ.jpg" class="d-block w-100" alt="...">
+    </div>
+	  <div class="fifth-slide">
+      <img src="https://www.dailypaws.com/thmb/vy0pXTnwE4tF3CR1Mlbri8jWTns=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/best-female-cat-names-730290907-2000-3df3ecef433546f7a4d8c557998d8837.jpg" class="d-block w-100" alt="...">
+    </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  <button class="glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  <button class="glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
