--- a/main.html
+++ b/main.html
@@ -26,11 +26,11 @@
       <img src="https://www.dailypaws.com/thmb/vy0pXTnwE4tF3CR1Mlbri8jWTns=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/best-female-cat-names-730290907-2000-3df3ecef433546f7a4d8c557998d8837.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class="glyphicon-chevron-left" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  <button class="glyphicon-chevron-left .left carousel-control" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="glyphicon-chevron-right" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  <button class="glyphicon-chevron-right .right carousel-control" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
