--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <div id="myCarousel" class="carousel" data-bs-ride="carousel">
-  <div class="carousel-inner">
+  <div class="carousel-inner slide">
     <div class="first-slide">
       <img src="https://img.freepik.com/free-photo/puppy-that-is-walking-snow_1340-37228.jpg?w=2000" class="d-block w-100" alt="...">
     </div>
