--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <div class="first-slide">
       <img src="https://img.freepik.com/free-photo/puppy-that-is-walking-snow_1340-37228.jpg?w=2000" class="d-block w-100" alt="...">
     </div>
-    <div class="second-slide">
+    <div class="second-slide .left">
       <img src="https://img.freepik.com/premium-photo/beautiful-baby-dog_943963-407.jpg?w=2000" class="d-block w-100" alt="...">
     </div>
     <div class="third-slide active">
